migrated to java 25 and refactored everything to align with the upgrade