@@ -4,20 +4,17 @@ import com.exam.grocery_shop.dto.ProductDTO;
 import com.exam.grocery_shop.model.Product;
 import org.springframework.stereotype.Component;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
 @Component
-public class ProductMapper {
+public final class ProductMapper {
 
     public ProductDTO.ProductResponse mapToResponse(Product product) {
-        List<ProductDTO.PackagingOptionDTO> options = product.getPackagingOptions().stream()
+        var options = product.getPackagingOptions().stream()
                 .map(option -> ProductDTO.PackagingOptionDTO.builder()
                         .id(option.getId())
                         .quantity(option.getQuantity())
                         .packagePrice(option.getPackagePrice())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         return ProductDTO.ProductResponse.builder()
                 .code(product.getCode())
@@ -29,9 +26,9 @@ public class ProductMapper {
 
     public Product mapToEntity(ProductDTO.CreateProductRequest request) {
         return Product.builder()
-                .code(request.getCode())
-                .name(request.getName())
-                .price(request.getPrice())
+                .code(request.code())
+                .name(request.name())
+                .price(request.price())
                 .build();
     }
 }
