@@ -7,6 +7,8 @@ import com.exam.grocery_shop.model.PackagingOption;
 import com.exam.grocery_shop.model.Product;
 import com.exam.grocery_shop.repository.ProductRepository;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -16,8 +18,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -25,7 +26,8 @@ import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
-public class OrderServiceTest {
+@DisplayName("OrderService Tests")
+final class OrderServiceTest {
 
     @Mock
     private ProductRepository productRepository;
@@ -45,7 +47,6 @@ public class OrderServiceTest {
 
     @BeforeEach
     void setUp() {
-
         cheese = Product.builder()
                 .code("CE")
                 .name("Cheese")
@@ -53,14 +54,14 @@ public class OrderServiceTest {
                 .packagingOptions(new ArrayList<>())
                 .build();
 
-        PackagingOption cheese3 = PackagingOption.builder()
+        var cheese3 = PackagingOption.builder()
                 .id(1L)
                 .quantity(3)
                 .packagePrice(new BigDecimal("14.95"))
                 .product(cheese)
                 .build();
 
-        PackagingOption cheese5 = PackagingOption.builder()
+        var cheese5 = PackagingOption.builder()
                 .id(2L)
                 .quantity(5)
                 .packagePrice(new BigDecimal("20.95"))
@@ -77,21 +78,21 @@ public class OrderServiceTest {
                 .packagingOptions(new ArrayList<>())
                 .build();
 
-        PackagingOption ham2 = PackagingOption.builder()
+        var ham2 = PackagingOption.builder()
                 .id(3L)
                 .quantity(2)
                 .packagePrice(new BigDecimal("13.95"))
                 .product(ham)
                 .build();
 
-        PackagingOption ham5 = PackagingOption.builder()
+        var ham5 = PackagingOption.builder()
                 .id(4L)
                 .quantity(5)
                 .packagePrice(new BigDecimal("29.95"))
                 .product(ham)
                 .build();
 
-        PackagingOption ham8 = PackagingOption.builder()
+        var ham8 = PackagingOption.builder()
                 .id(5L)
                 .quantity(8)
                 .packagePrice(new BigDecimal("40.95"))
@@ -110,109 +111,122 @@ public class OrderServiceTest {
                 .build();
     }
 
-    @Test
-    void calculateOrder_WithSampleData_ShouldReturnCorrectBreakdown() {
+    @Nested
+    @DisplayName("Order Calculation Tests")
+    class OrderCalculationTests {
 
-        OrderDTO.OrderRequest request = OrderDTO.OrderRequest.builder()
-                .items(Arrays.asList(
-                        OrderDTO.OrderItem.builder().productCode("CE").quantity(10).build(),
-                        OrderDTO.OrderItem.builder().productCode("HM").quantity(14).build(),
-                        OrderDTO.OrderItem.builder().productCode("SS").quantity(3).build()
-                ))
-                .build();
+        @Test
+        @DisplayName("Should calculate order correctly with sample data")
+        void calculateOrder_WithSampleData_ShouldReturnCorrectBreakdown() {
+            var request = new OrderDTO.OrderRequest(List.of(
+                    new OrderDTO.OrderItem("CE", 10),
+                    new OrderDTO.OrderItem("HM", 14),
+                    new OrderDTO.OrderItem("SS", 3)
+            ));
 
-        when(productRepository.findById("CE")).thenReturn(Optional.of(cheese));
-        when(productRepository.findById("HM")).thenReturn(Optional.of(ham));
-        when(productRepository.findById("SS")).thenReturn(Optional.of(soySauce));
+            when(productRepository.findById("CE")).thenReturn(Optional.of(cheese));
+            when(productRepository.findById("HM")).thenReturn(Optional.of(ham));
+            when(productRepository.findById("SS")).thenReturn(Optional.of(soySauce));
 
-        OrderDTO.OrderResponse response = orderService.calculateOrder(request);
+            OrderDTO.OrderResponse response = orderService.calculateOrder(request);
 
-        assertNotNull(response);
-        assertEquals(3, response.getLineItems().size());
+            assertAll(
+                    () -> assertNotNull(response),
+                    () -> assertEquals(3, response.lineItems().size())
+            );
 
-        OrderDTO.OrderLineItem cheeseItem = response.getLineItems().get(0);
-        assertEquals("CE", cheeseItem.getProductCode());
-        assertEquals(10, cheeseItem.getTotalQuantity());
-        assertEquals(new BigDecimal("41.90"), cheeseItem.getTotalCost());
-        assertEquals(1, cheeseItem.getPackages().size());
-        assertEquals(2, cheeseItem.getPackages().get(0).getPackageQuantity()); // 2 packages of 5
+            OrderDTO.OrderLineItem cheeseItem = response.lineItems().get(0);
+            assertAll(
+                    () -> assertEquals("CE", cheeseItem.productCode()),
+                    () -> assertEquals(10, cheeseItem.totalQuantity()),
+                    () -> assertEquals(new BigDecimal("41.90"), cheeseItem.totalCost()),
+                    () -> assertEquals(1, cheeseItem.packages().size()),
+                    () -> assertEquals(2, cheeseItem.packages().get(0).packageQuantity())
+            );
 
-        OrderDTO.OrderLineItem hamItem = response.getLineItems().get(1);
-        assertEquals("HM", hamItem.getProductCode());
-        assertEquals(14, hamItem.getTotalQuantity());
-        assertEquals(new BigDecimal("78.85"), hamItem.getTotalCost());
+            OrderDTO.OrderLineItem hamItem = response.lineItems().get(1);
+            assertAll(
+                    () -> assertEquals("HM", hamItem.productCode()),
+                    () -> assertEquals(14, hamItem.totalQuantity()),
+                    () -> assertEquals(new BigDecimal("78.85"), hamItem.totalCost())
+            );
 
-        OrderDTO.OrderLineItem soySauceItem = response.getLineItems().get(2);
-        assertEquals("SS", soySauceItem.getProductCode());
-        assertEquals(3, soySauceItem.getTotalQuantity());
-        assertEquals(new BigDecimal("35.85"), soySauceItem.getTotalCost());
+            OrderDTO.OrderLineItem soySauceItem = response.lineItems().get(2);
+            assertAll(
+                    () -> assertEquals("SS", soySauceItem.productCode()),
+                    () -> assertEquals(3, soySauceItem.totalQuantity()),
+                    () -> assertEquals(new BigDecimal("35.85"), soySauceItem.totalCost())
+            );
 
-        BigDecimal expectedTotal = new BigDecimal("41.90")
-                .add(new BigDecimal("78.85"))
-                .add(new BigDecimal("35.85"));
-        assertEquals(expectedTotal, response.getTotalCost());
+            var expectedTotal = new BigDecimal("41.90")
+                    .add(new BigDecimal("78.85"))
+                    .add(new BigDecimal("35.85"));
+            assertEquals(expectedTotal, response.totalCost());
+        }
+
+        @Test
+        @DisplayName("Should use unit price when no packaging options available")
+        void calculateOrder_WithNoPackagingOptions_ShouldUseUnitPrice() {
+            var request = new OrderDTO.OrderRequest(
+                    List.of(new OrderDTO.OrderItem("SS", 5))
+            );
+
+            when(productRepository.findById("SS")).thenReturn(Optional.of(soySauce));
+
+            OrderDTO.OrderResponse response = orderService.calculateOrder(request);
+
+            assertAll(
+                    () -> assertNotNull(response),
+                    () -> assertEquals(1, response.lineItems().size())
+            );
+
+            OrderDTO.OrderLineItem item = response.lineItems().get(0);
+            assertAll(
+                    () -> assertEquals("SS", item.productCode()),
+                    () -> assertEquals(5, item.totalQuantity()),
+                    () -> assertEquals(new BigDecimal("59.75"), item.totalCost()),
+                    () -> assertEquals(1, item.packages().size()),
+                    () -> assertEquals(5, item.packages().get(0).packageQuantity()),
+                    () -> assertEquals(1, item.packages().get(0).itemsPerPackage())
+            );
+        }
+
+        @Test
+        @DisplayName("Should minimize package count in optimal packaging")
+        void calculateOrder_OptimalPackaging_ShouldMinimizePackageCount() {
+            var request = new OrderDTO.OrderRequest(
+                    List.of(new OrderDTO.OrderItem("CE", 10))
+            );
+
+            when(productRepository.findById("CE")).thenReturn(Optional.of(cheese));
+
+            OrderDTO.OrderResponse response = orderService.calculateOrder(request);
+
+            OrderDTO.OrderLineItem item = response.lineItems().get(0);
+
+            int totalPackages = item.packages().stream()
+                    .mapToInt(OrderDTO.PackageBreakdown::packageQuantity)
+                    .sum();
+
+            assertEquals(2, totalPackages);
+        }
     }
 
-    @Test
-    void calculateOrder_WithNonExistentProduct_ShouldThrowException() {
+    @Nested
+    @DisplayName("Error Handling Tests")
+    class ErrorHandlingTests {
 
-        OrderDTO.OrderRequest request = OrderDTO.OrderRequest.builder()
-                .items(Collections.singletonList(
-                        OrderDTO.OrderItem.builder().productCode("INVALID").quantity(10).build()
-                ))
-                .build();
+        @Test
+        @DisplayName("Should throw exception when product does not exist")
+        void calculateOrder_WithNonExistentProduct_ShouldThrowException() {
+            var request = new OrderDTO.OrderRequest(
+                    List.of(new OrderDTO.OrderItem("INVALID", 10))
+            );
 
-        when(productRepository.findById(anyString())).thenReturn(Optional.empty());
+            when(productRepository.findById(anyString())).thenReturn(Optional.empty());
 
-        assertThrows(ResourceNotFoundException.class, () -> {
-            orderService.calculateOrder(request);
-        });
-    }
-
-    @Test
-    void calculateOrder_WithNoPackagingOptions_ShouldUseUnitPrice() {
-
-        OrderDTO.OrderRequest request = OrderDTO.OrderRequest.builder()
-                .items(Collections.singletonList(
-                        OrderDTO.OrderItem.builder().productCode("SS").quantity(5).build()
-                ))
-                .build();
-
-        when(productRepository.findById("SS")).thenReturn(Optional.of(soySauce));
-
-        OrderDTO.OrderResponse response = orderService.calculateOrder(request);
-
-        assertNotNull(response);
-        assertEquals(1, response.getLineItems().size());
-
-        OrderDTO.OrderLineItem item = response.getLineItems().get(0);
-        assertEquals("SS", item.getProductCode());
-        assertEquals(5, item.getTotalQuantity());
-        assertEquals(new BigDecimal("59.75"), item.getTotalCost()); // 5 * 11.95
-        assertEquals(1, item.getPackages().size());
-        assertEquals(5, item.getPackages().get(0).getPackageQuantity());
-        assertEquals(1, item.getPackages().get(0).getItemsPerPackage());
-    }
-
-    @Test
-    void calculateOrder_OptimalPackaging_ShouldMinimizePackageCount() {
-
-        OrderDTO.OrderRequest request = OrderDTO.OrderRequest.builder()
-                .items(Collections.singletonList(
-                        OrderDTO.OrderItem.builder().productCode("CE").quantity(10).build()
-                ))
-                .build();
-
-        when(productRepository.findById("CE")).thenReturn(Optional.of(cheese));
-
-        OrderDTO.OrderResponse response = orderService.calculateOrder(request);
-
-        OrderDTO.OrderLineItem item = response.getLineItems().get(0);
-
-        int totalPackages = item.getPackages().stream()
-                .mapToInt(OrderDTO.PackageBreakdown::getPackageQuantity)
-                .sum();
-
-        assertEquals(2, totalPackages);
+            assertThrows(ResourceNotFoundException.class,
+                    () -> orderService.calculateOrder(request));
+        }
     }
 }
